🎨 Improve acuteness analysis UI and legend display
✨ IMPROVEMENTS:
- 🔄 Reorder dropdown options: Vertex → Face → Cell (logical progression)
- 🏷️ Remove 'Acuteness' suffix from dropdown labels for cleaner UI
- 📊 Fix legend scale: show percentage levels instead of raw counts
- 🎯 Better scale interpretation: Low (0%) → High (100% - max)
- 📈 Add analysis type titles to legend for clarity

🔧 TECHNICAL CHANGES:
- Update createColorLegend() to accept analysisType parameter
- Percentage-based labels with actual score references
- More intuitive scale representation for users
- Cleaner dropdown interface

🎮 USER EXPERIENCE:
- Easier to understand relative acuteness levels
- Logical order progression from points → faces → cells
- Clear visual scale with percentage indicators

--- a/index.html
+++ b/index.html
@@ -279,9 +279,9 @@
                         <label>Mode:</label>
                         <select id="analysisMode" style="width: 150px;">
                             <option value="None">None</option>
-                            <option value="CELL">Cell Acuteness</option>
-                            <option value="FACE">Face Acuteness</option>
-                            <option value="VERTEX">Vertex Acuteness</option>
+                            <option value="VERTEX">Vertex</option>
+                            <option value="FACE">Face</option>
+                            <option value="CELL">Cell</option>
                         </select>
                     </div>
                 </div>
