Add comment to mark debug logging as removable

--- a/index.html
+++ b/index.html
@@ -1157,6 +1157,7 @@
             let cellIndex = 0;
             
             // Debug: log first few cells to understand the issue
+            // Debug logging - can be removed once periodic cells work correctly
             let debugBoundaryCount = 0;
             let debugLargeSpanCount = 0;
             
