Set Cells as default mode and update README with comprehensive model explanation
- Changed default selection in dropdown from None to Cells
- Added detailed 'How the Model Works' section to README
- Explained mathematical foundations (Delaunay/Voronoi duality)
- Documented implementation architecture and data flow
- Detailed acuteness detection algorithms for all three modes
- Explained periodic boundary handling with MIC
- Added performance optimization notes
- Updated UI control descriptions to match new interface

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                             <select id="faceCellMode" style="margin-right: 5px;">
                                 <option value="none">None</option>
                                 <option value="faces">Faces</option>
-                                <option value="cells">Cells</option>
+                                <option value="cells" selected>Cells</option>
                             </select>
                         </label>
                         <label style="margin-left: 10px;">Opacity:</label>
