Hide/show legend boxes along with control panel
- Modified controls-toggle event listener to also hide/show acuteness legends
- When clicking hide, both control panel and legend boxes are hidden
- When clicking show, both control panel and legend boxes are shown
- Improves UI consistency and gives cleaner view when controls are hidden

--- a/index.html
+++ b/index.html
@@ -1925,17 +1925,26 @@
                 const controls = document.getElementById('controls');
                 const toggle = document.getElementById('controls-toggle');
                 const content = document.getElementById('controls-content');
+                const legends = document.querySelectorAll('.acuteness-legend');
                 
                 if (controls.classList.contains('hidden')) {
                     controls.classList.remove('hidden');
                     content.style.display = 'block';
                     toggle.textContent = 'hide';
                     toggle.title = 'Hide Controls';
+                    // Show legends
+                    legends.forEach(legend => {
+                        legend.style.display = 'block';
+                    });
                 } else {
                     controls.classList.add('hidden');
                     content.style.display = 'none';
                     toggle.textContent = 'show';
                     toggle.title = 'Show Controls';
+                    // Hide legends
+                    legends.forEach(legend => {
+                        legend.style.display = 'none';
+                    });
                 }
             });
             
