--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                 <div class="control-row">
                     <div class="control-group">
                         <label><input type="checkbox" id="vertexAnalysis" checked> Vertices</label>
-                        <label style="margin-left: 10px;">Thickness:</label>
+                        <label style="margin-left: 10px;">Size:</label>
                         <input type="range" id="vertexThickness" min="0.005" max="0.05" step="0.001" value="0.010" style="width: 80px;">
                         <span id="vertexThicknessValue">0.010</span>
                     </div>
@@ -287,7 +287,7 @@
                 <div class="control-row">
                     <div class="control-group">
                         <label><input type="checkbox" id="edgeAnalysis"> Edges</label>
-                        <label style="margin-left: 10px;">Thickness:</label>
+                        <label style="margin-left: 10px;">Size:</label>
                         <input type="range" id="edgeThickness" min="0.005" max="0.05" step="0.001" value="0.010" style="width: 80px;">
                         <span id="edgeThicknessValue">0.010</span>
                     </div>
