Update header to 'Fabric of Space X'

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <button id="controls-toggle" title="Hide Controls">hide</button>
         <div id="controls-content">
             <div class="section" id="main-controls">
-                <div class="section-header">Fabric of Space</div>
+                <div class="section-header">Fabric of Space X</div>
                 <div class="control-row">
                     <div class="control-group">
                         <label>Points:</label>
