Add 4 distinct growth/shrink modes for better control
- Added 4 modes instead of 2:
  1. '+ Acute = + (only)': Only cells above threshold grow
  2. '+ Acute = + / - Acute = -': Above threshold grow, below shrink (default)
  3. '+ Acute = - (only)': Only cells above threshold shrink
  4. '+ Acute = - / - Acute = +': Above threshold shrink, below grow
- This gives users full control over which cells are affected
- The '(only)' modes affect cells on one side of threshold only
- The dual modes affect cells on both sides of threshold oppositely

--- a/index.html
+++ b/index.html
@@ -312,8 +312,10 @@
                     </div>
                     <div class="control-group">
                         <select id="growthMode" style="width: 100%;">
-                            <option value="more_grow">More Acute = Grow</option>
-                            <option value="less_grow">Less Acute = Grow</option>
+                            <option value="more_grow_only">+ Acute = + (only)</option>
+                            <option value="more_grow_both" selected>+ Acute = + / - Acute = -</option>
+                            <option value="more_shrink_only">+ Acute = - (only)</option>
+                            <option value="more_shrink_both">+ Acute = - / - Acute = +</option>
                         </select>
                     </div>
                 </div>
